st_parser.output
Nonterminals useless in grammar

    enum_type
    enum_values


Terminals unused in grammar

    TOD_LITERAL
    DT_LITERAL
    PRAGMA
    EXPORT
    VAR_ACCESS
    TYPE_WORD
    TYPE_DWORD
    TYPE_LWORD
    TYPE_SINT
    TYPE_LINT
    TYPE_USINT
    TYPE_UINT
    TYPE_UDINT
    TYPE_ULINT
    TYPE_WSTRING
    TYPE_DATE
    TYPE_TIME_OF_DAY
    TYPE_DATE_AND_TIME
    TYPE_UNION
    END_UNION
    TYPE_ENUM
    END_ENUM
    LBRACE
    RBRACE
    ERROR_TOKEN


Rules useless in grammar

  153 enum_type: TYPE_ENUM enum_values END_ENUM

  154 enum_values: IDENTIFIER
  155            | enum_values COMMA IDENTIFIER


State 9 conflicts: 30 shift/reduce, 18 reduce/reduce
State 10 conflicts: 12 shift/reduce
State 23 conflicts: 1 shift/reduce
State 40 conflicts: 17 shift/reduce
State 46 conflicts: 18 shift/reduce
State 100 conflicts: 13 shift/reduce
State 111 conflicts: 12 shift/reduce
State 122 conflicts: 17 shift/reduce
State 140 conflicts: 17 shift/reduce
State 150 conflicts: 17 shift/reduce
State 200 conflicts: 1 shift/reduce
State 207 conflicts: 12 shift/reduce
State 215 conflicts: 17 shift/reduce
State 220 conflicts: 17 shift/reduce
State 223 conflicts: 17 shift/reduce
State 238 conflicts: 17 shift/reduce
State 244 conflicts: 17 shift/reduce
State 248 conflicts: 9 shift/reduce
State 263 conflicts: 17 shift/reduce
State 267 conflicts: 17 shift/reduce
State 272 conflicts: 12 shift/reduce
State 282 conflicts: 17 shift/reduce
State 284 conflicts: 17 shift/reduce


Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: import_list program_declaration
    2                 | program_declaration
    3                 | import_list library_declaration
    4                 | library_declaration

    5 import_list: import_declaration
    6            | import_list import_declaration

    7 import_declaration: IMPORT IDENTIFIER SEMICOLON
    8                   | IMPORT IDENTIFIER AS IDENTIFIER SEMICOLON
    9                   | IMPORT IDENTIFIER FROM STRING_LITERAL SEMICOLON
   10                   | IMPORT IDENTIFIER AS IDENTIFIER FROM STRING_LITERAL SEMICOLON

   11 program_declaration: PROGRAM IDENTIFIER declaration_list statement_list END_PROGRAM
   12                    | PROGRAM IDENTIFIER statement_list END_PROGRAM
   13                    | PROGRAM IDENTIFIER declaration_list END_PROGRAM
   14                    | PROGRAM IDENTIFIER END_PROGRAM

   15 library_declaration: LIBRARY IDENTIFIER VERSION STRING_LITERAL declaration_list END_LIBRARY
   16                    | LIBRARY IDENTIFIER declaration_list END_LIBRARY

   17 declaration_list: ε
   18                 | declaration
   19                 | declaration_list declaration

   20 declaration: var_declaration
   21            | function_declaration
   22            | type_declaration

   23 var_declaration: var_category var_list END_VAR

   24 var_category: VAR
   25             | VAR_INPUT
   26             | VAR_OUTPUT
   27             | VAR_IN_OUT
   28             | VAR_EXTERNAL
   29             | VAR_GLOBAL
   30             | VAR_CONSTANT
   31             | VAR_TEMP
   32             | VAR_CONFIG

   33 var_list: var_item
   34         | var_list var_item

   35 var_item: IDENTIFIER COLON type_specifier SEMICOLON
   36         | IDENTIFIER COLON type_specifier ASSIGN expression SEMICOLON
   37         | IDENTIFIER COLON array_type SEMICOLON

   38 type_specifier: basic_type
   39               | array_type
   40               | struct_type
   41               | IDENTIFIER

   42 basic_type: TYPE_BOOL
   43           | TYPE_BYTE
   44           | TYPE_INT
   45           | TYPE_DINT
   46           | TYPE_REAL
   47           | TYPE_LREAL
   48           | TYPE_STRING
   49           | TYPE_TIME

   50 array_type: TYPE_ARRAY LBRACKET array_bounds RBRACKET OF type_specifier

   51 array_bounds: bound_specification
   52             | array_bounds COMMA bound_specification

   53 bound_specification: INTEGER_LITERAL RANGE INTEGER_LITERAL

   54 struct_type: TYPE_STRUCT struct_members END_STRUCT

   55 struct_members: var_item
   56               | struct_members var_item

   57 type_declaration: TYPE IDENTIFIER COLON type_specifier SEMICOLON END_TYPE

   58 function_declaration: function_type IDENTIFIER COLON type_specifier declaration_list statement_list END_FUNCTION
   59                     | function_type IDENTIFIER LPAREN parameter_list RPAREN COLON type_specifier declaration_list statement_list END_FUNCTION
   60                     | function_type IDENTIFIER declaration_list statement_list END_FUNCTION_BLOCK

   61 function_type: FUNCTION
   62              | FUNCTION_BLOCK

   63 parameter_list: ε
   64               | parameter_declaration
   65               | parameter_list SEMICOLON parameter_declaration

   66 parameter_declaration: parameter_category IDENTIFIER COLON type_specifier
   67                      | parameter_category IDENTIFIER COLON type_specifier ASSIGN expression

   68 parameter_category: ε
   69                   | VAR_INPUT
   70                   | VAR_OUTPUT
   71                   | VAR_IN_OUT

   72 statement_list: ε
   73               | statement
   74               | statement_list statement

   75 statement: assignment_statement SEMICOLON
   76          | expression_statement SEMICOLON
   77          | if_statement
   78          | case_statement
   79          | for_statement
   80          | while_statement
   81          | repeat_statement
   82          | return_statement SEMICOLON
   83          | exit_statement SEMICOLON
   84          | continue_statement SEMICOLON

   85 assignment_statement: primary_expr ASSIGN expression

   86 expression_statement: function_call

   87 if_statement: IF expression THEN statement_list END_IF
   88             | IF expression THEN statement_list ELSE statement_list END_IF
   89             | IF expression THEN statement_list elsif_list END_IF
   90             | IF expression THEN statement_list elsif_list ELSE statement_list END_IF

   91 elsif_list: elsif_statement
   92           | elsif_list elsif_statement

   93 elsif_statement: ELSIF expression THEN statement_list

   94 case_statement: CASE expression OF case_list END_CASE
   95               | CASE expression OF case_list ELSE statement_list END_CASE

   96 case_list: case_item
   97          | case_list case_item

   98 case_item: case_values COLON statement_list

   99 case_values: expression
  100            | case_values COMMA expression

  101 for_statement: FOR IDENTIFIER ASSIGN expression TO expression DO statement_list END_FOR
  102              | FOR IDENTIFIER ASSIGN expression TO expression BY expression DO statement_list END_FOR

  103 while_statement: WHILE expression DO statement_list END_WHILE

  104 repeat_statement: REPEAT statement_list UNTIL expression END_REPEAT

  105 return_statement: RETURN
  106                 | RETURN expression

  107 exit_statement: EXIT

  108 continue_statement: CONTINUE

  109 expression: logical_expr

  110 logical_expr: comparison_expr
  111             | logical_expr AND comparison_expr
  112             | logical_expr OR comparison_expr
  113             | logical_expr XOR comparison_expr

  114 comparison_expr: additive_expr
  115                | comparison_expr EQ additive_expr
  116                | comparison_expr NE additive_expr
  117                | comparison_expr LT additive_expr
  118                | comparison_expr LE additive_expr
  119                | comparison_expr GT additive_expr
  120                | comparison_expr GE additive_expr

  121 additive_expr: multiplicative_expr
  122              | additive_expr PLUS multiplicative_expr
  123              | additive_expr MINUS multiplicative_expr

  124 multiplicative_expr: unary_expr
  125                    | multiplicative_expr MULTIPLY unary_expr
  126                    | multiplicative_expr DIVIDE unary_expr
  127                    | multiplicative_expr MOD unary_expr
  128                    | multiplicative_expr POWER unary_expr

  129 unary_expr: primary_expr
  130           | NOT unary_expr
  131           | MINUS unary_expr
  132           | PLUS unary_expr

  133 primary_expr: INTEGER_LITERAL
  134             | REAL_LITERAL
  135             | BOOL_LITERAL
  136             | STRING_LITERAL
  137             | WSTRING_LITERAL
  138             | TIME_LITERAL
  139             | DATE_LITERAL
  140             | IDENTIFIER
  141             | function_call
  142             | array_access
  143             | member_access
  144             | LPAREN expression RPAREN

  145 function_call: IDENTIFIER LPAREN RPAREN
  146              | IDENTIFIER LPAREN argument_list RPAREN
  147              | IDENTIFIER DOT IDENTIFIER LPAREN RPAREN
  148              | IDENTIFIER DOT IDENTIFIER LPAREN argument_list RPAREN

  149 argument_list: expression
  150              | argument_list COMMA expression

  151 array_access: primary_expr LBRACKET argument_list RBRACKET

  152 member_access: primary_expr DOT IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_LITERAL <integer> (258) 53 133
    REAL_LITERAL <real> (259) 134
    BOOL_LITERAL <boolean> (260) 135
    STRING_LITERAL <string> (261) 9 10 15 136
    WSTRING_LITERAL <string> (262) 137
    TIME_LITERAL <string> (263) 138
    DATE_LITERAL <string> (264) 139
    TOD_LITERAL <string> (265)
    DT_LITERAL <string> (266)
    IDENTIFIER <string> (267) 7 8 9 10 11 12 13 14 15 16 35 36 37 41 57 58 59 60 66 67 101 102 140 145 146 147 148 152
    PRAGMA <string> (268)
    PROGRAM (269) 11 12 13 14
    END_PROGRAM (270) 11 12 13 14
    FUNCTION (271) 61
    END_FUNCTION (272) 58 59
    FUNCTION_BLOCK (273) 62
    END_FUNCTION_BLOCK (274) 60
    LIBRARY (275) 15 16
    END_LIBRARY (276) 15 16
    IMPORT (277) 7 8 9 10
    FROM (278) 9 10
    AS (279) 8 10
    EXPORT (280)
    VERSION (281) 15
    VAR (282) 24
    END_VAR (283) 23
    VAR_INPUT (284) 25 69
    VAR_OUTPUT (285) 26 70
    VAR_IN_OUT (286) 27 71
    VAR_EXTERNAL (287) 28
    VAR_GLOBAL (288) 29
    VAR_ACCESS (289)
    VAR_TEMP (290) 31
    VAR_CONFIG (291) 32
    VAR_CONSTANT (292) 30
    IF (293) 87 88 89 90
    THEN (294) 87 88 89 90 93
    ELSE (295) 88 90 95
    ELSIF (296) 93
    END_IF (297) 87 88 89 90
    CASE (298) 94 95
    OF (299) 50 94 95
    END_CASE (300) 94 95
    FOR (301) 101 102
    TO (302) 101 102
    BY (303) 102
    DO (304) 101 102 103
    END_FOR (305) 101 102
    WHILE (306) 103
    END_WHILE (307) 103
    REPEAT (308) 104
    UNTIL (309) 104
    END_REPEAT (310) 104
    EXIT (311) 107
    CONTINUE (312) 108
    RETURN (313) 105 106
    TYPE_BOOL (314) 42
    TYPE_BYTE (315) 43
    TYPE_WORD (316)
    TYPE_DWORD (317)
    TYPE_LWORD (318)
    TYPE_SINT (319)
    TYPE_INT (320) 44
    TYPE_DINT (321) 45
    TYPE_LINT (322)
    TYPE_USINT (323)
    TYPE_UINT (324)
    TYPE_UDINT (325)
    TYPE_ULINT (326)
    TYPE_REAL (327) 46
    TYPE_LREAL (328) 47
    TYPE_STRING (329) 48
    TYPE_WSTRING (330)
    TYPE_TIME (331) 49
    TYPE_DATE (332)
    TYPE_TIME_OF_DAY (333)
    TYPE_DATE_AND_TIME (334)
    TYPE_ARRAY (335) 50
    TYPE_STRUCT (336) 54
    END_STRUCT (337) 54
    TYPE_UNION (338)
    END_UNION (339)
    TYPE_ENUM (340)
    END_ENUM (341)
    TYPE (342) 57
    END_TYPE (343) 57
    ASSIGN (344) 36 67 85 101 102
    EQ (345) 115
    NE (346) 116
    LT (347) 117
    LE (348) 118
    GT (349) 119
    GE (350) 120
    PLUS (351) 122 132
    MINUS (352) 123 131
    MULTIPLY (353) 125
    DIVIDE (354) 126
    MOD (355) 127
    POWER (356) 128
    AND (357) 111
    OR (358) 112
    XOR (359) 113
    NOT (360) 130
    LPAREN (361) 59 144 145 146 147 148
    RPAREN (362) 59 144 145 146 147 148
    LBRACKET (363) 50 151
    RBRACKET (364) 50 151
    LBRACE (365)
    RBRACE (366)
    SEMICOLON (367) 7 8 9 10 35 36 37 57 65 75 76 82 83 84
    COLON (368) 35 36 37 57 58 59 66 67 98
    COMMA (369) 52 100 150
    DOT (370) 147 148 152
    RANGE (371) 53
    ERROR_TOKEN (372)
    UMINUS (373)
    UPLUS (374)


Nonterminals, with rules where they appear

    $accept (120)
        on left: 0
    compilation_unit <node> (121)
        on left: 1 2 3 4
        on right: 0
    import_list <node> (122)
        on left: 5 6
        on right: 1 3 6
    import_declaration <node> (123)
        on left: 7 8 9 10
        on right: 5 6
    program_declaration <node> (124)
        on left: 11 12 13 14
        on right: 1 2
    library_declaration <node> (125)
        on left: 15 16
        on right: 3 4
    declaration_list <node> (126)
        on left: 17 18 19
        on right: 11 13 15 16 19 58 59 60
    declaration <node> (127)
        on left: 20 21 22
        on right: 18 19
    var_declaration <node> (128)
        on left: 23
        on right: 20
    var_category <var_cat> (129)
        on left: 24 25 26 27 28 29 30 31 32
        on right: 23
    var_list <node> (130)
        on left: 33 34
        on right: 23 34
    var_item <node> (131)
        on left: 35 36 37
        on right: 33 34 55 56
    type_specifier <type> (132)
        on left: 38 39 40 41
        on right: 35 36 50 57 58 59 66 67
    basic_type <type> (133)
        on left: 42 43 44 45 46 47 48 49
        on right: 38
    array_type <node> (134)
        on left: 50
        on right: 37 39
    array_bounds <node> (135)
        on left: 51 52
        on right: 50 52
    bound_specification <node> (136)
        on left: 53
        on right: 51 52
    struct_type <node> (137)
        on left: 54
        on right: 40
    struct_members <node> (138)
        on left: 55 56
        on right: 54 56
    type_declaration <node> (139)
        on left: 57
        on right: 22
    function_declaration <node> (140)
        on left: 58 59 60
        on right: 21
    function_type <func_type> (141)
        on left: 61 62
        on right: 58 59 60
    parameter_list <node> (142)
        on left: 63 64 65
        on right: 59 65
    parameter_declaration <node> (143)
        on left: 66 67
        on right: 64 65
    parameter_category <param_cat> (144)
        on left: 68 69 70 71
        on right: 66 67
    statement_list <node> (145)
        on left: 72 73 74
        on right: 11 12 58 59 60 74 87 88 89 90 93 95 98 101 102 103 104
    statement <node> (146)
        on left: 75 76 77 78 79 80 81 82 83 84
        on right: 73 74
    assignment_statement <node> (147)
        on left: 85
        on right: 75
    expression_statement <node> (148)
        on left: 86
        on right: 76
    if_statement <node> (149)
        on left: 87 88 89 90
        on right: 77
    elsif_list <node> (150)
        on left: 91 92
        on right: 89 90 92
    elsif_statement <node> (151)
        on left: 93
        on right: 91 92
    case_statement <node> (152)
        on left: 94 95
        on right: 78
    case_list <node> (153)
        on left: 96 97
        on right: 94 95 97
    case_item <node> (154)
        on left: 98
        on right: 96 97
    case_values <node> (155)
        on left: 99 100
        on right: 98 100
    for_statement <node> (156)
        on left: 101 102
        on right: 79
    while_statement <node> (157)
        on left: 103
        on right: 80
    repeat_statement <node> (158)
        on left: 104
        on right: 81
    return_statement <node> (159)
        on left: 105 106
        on right: 82
    exit_statement <node> (160)
        on left: 107
        on right: 83
    continue_statement <node> (161)
        on left: 108
        on right: 84
    expression <node> (162)
        on left: 109
        on right: 36 67 85 87 88 89 90 93 94 95 99 100 101 102 103 104 106 144 149 150
    logical_expr <node> (163)
        on left: 110 111 112 113
        on right: 109 111 112 113
    comparison_expr <node> (164)
        on left: 114 115 116 117 118 119 120
        on right: 110 111 112 113 115 116 117 118 119 120
    additive_expr <node> (165)
        on left: 121 122 123
        on right: 114 115 116 117 118 119 120 122 123
    multiplicative_expr <node> (166)
        on left: 124 125 126 127 128
        on right: 121 122 123 125 126 127 128
    unary_expr <node> (167)
        on left: 129 130 131 132
        on right: 124 125 126 127 128 130 131 132
    primary_expr <node> (168)
        on left: 133 134 135 136 137 138 139 140 141 142 143 144
        on right: 85 129 151 152
    function_call <node> (169)
        on left: 145 146 147 148
        on right: 86 141
    argument_list <node> (170)
        on left: 149 150
        on right: 146 148 150 151
    array_access <node> (171)
        on left: 151
        on right: 142
    member_access <node> (172)
        on left: 152
        on right: 143


State 0

    0 $accept: • compilation_unit $end

    PROGRAM  shift, and go to state 1
    LIBRARY  shift, and go to state 2
    IMPORT   shift, and go to state 3

    compilation_unit     go to state 4
    import_list          go to state 5
    import_declaration   go to state 6
    program_declaration  go to state 7
    library_declaration  go to state 8


State 1

   11 program_declaration: PROGRAM • IDENTIFIER declaration_list statement_list END_PROGRAM
   12                    | PROGRAM • IDENTIFIER statement_list END_PROGRAM
   13                    | PROGRAM • IDENTIFIER declaration_list END_PROGRAM
   14                    | PROGRAM • IDENTIFIER END_PROGRAM

    IDENTIFIER  shift, and go to state 9


State 2

   15 library_declaration: LIBRARY • IDENTIFIER VERSION STRING_LITERAL declaration_list END_LIBRARY
   16                    | LIBRARY • IDENTIFIER declaration_list END_LIBRARY

    IDENTIFIER  shift, and go to state 10


State 3

    7 import_declaration: IMPORT • IDENTIFIER SEMICOLON
    8                   | IMPORT • IDENTIFIER AS IDENTIFIER SEMICOLON
    9                   | IMPORT • IDENTIFIER FROM STRING_LITERAL SEMICOLON
   10                   | IMPORT • IDENTIFIER AS IDENTIFIER FROM STRING_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 11


State 4

    0 $accept: compilation_unit • $end

    $end  shift, and go to state 12


State 5

    1 compilation_unit: import_list • program_declaration
    3                 | import_list • library_declaration
    6 import_list: import_list • import_declaration

    PROGRAM  shift, and go to state 1
    LIBRARY  shift, and go to state 2
    IMPORT   shift, and go to state 3

    import_declaration   go to state 13
    program_declaration  go to state 14
    library_declaration  go to state 15


State 6

    5 import_list: import_declaration •

    $default  reduce using rule 5 (import_list)


State 7

    2 compilation_unit: program_declaration •

    $default  reduce using rule 2 (compilation_unit)


State 8

    4 compilation_unit: library_declaration •

    $default  reduce using rule 4 (compilation_unit)


State 9

   11 program_declaration: PROGRAM IDENTIFIER • declaration_list statement_list END_PROGRAM
   12                    | PROGRAM IDENTIFIER • statement_list END_PROGRAM
   13                    | PROGRAM IDENTIFIER • declaration_list END_PROGRAM
   14                    | PROGRAM IDENTIFIER • END_PROGRAM

    INTEGER_LITERAL  shift, and go to state 16
    REAL_LITERAL     shift, and go to state 17
    BOOL_LITERAL     shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    WSTRING_LITERAL  shift, and go to state 20
    TIME_LITERAL     shift, and go to state 21
    DATE_LITERAL     shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    END_PROGRAM      shift, and go to state 24
    FUNCTION         shift, and go to state 25
    FUNCTION_BLOCK   shift, and go to state 26
    VAR              shift, and go to state 27
    VAR_INPUT        shift, and go to state 28
    VAR_OUTPUT       shift, and go to state 29
    VAR_IN_OUT       shift, and go to state 30
    VAR_EXTERNAL     shift, and go to state 31
    VAR_GLOBAL       shift, and go to state 32
    VAR_TEMP         shift, and go to state 33
    VAR_CONFIG       shift, and go to state 34
    VAR_CONSTANT     shift, and go to state 35
    IF               shift, and go to state 36
    CASE             shift, and go to state 37
    FOR              shift, and go to state 38
    WHILE            shift, and go to state 39
    REPEAT           shift, and go to state 40
    EXIT             shift, and go to state 41
    CONTINUE         shift, and go to state 42
    RETURN           shift, and go to state 43
    TYPE             shift, and go to state 44
    LPAREN           shift, and go to state 45

    INTEGER_LITERAL  [reduce using rule 17 (declaration_list)]
    INTEGER_LITERAL  [reduce using rule 72 (statement_list)]
    REAL_LITERAL     [reduce using rule 17 (declaration_list)]
    REAL_LITERAL     [reduce using rule 72 (statement_list)]
    BOOL_LITERAL     [reduce using rule 17 (declaration_list)]
    BOOL_LITERAL     [reduce using rule 72 (statement_list)]
    STRING_LITERAL   [reduce using rule 17 (declaration_list)]
    STRING_LITERAL   [reduce using rule 72 (statement_list)]
    WSTRING_LITERAL  [reduce using rule 17 (declaration_list)]
    WSTRING_LITERAL  [reduce using rule 72 (statement_list)]
    TIME_LITERAL     [reduce using rule 17 (declaration_list)]
    TIME_LITERAL     [reduce using rule 72 (statement_list)]
    DATE_LITERAL     [reduce using rule 17 (declaration_list)]
    DATE_LITERAL     [reduce using rule 72 (statement_list)]
    IDENTIFIER       [reduce using rule 17 (declaration_list)]
    IDENTIFIER       [reduce using rule 72 (statement_list)]
    END_PROGRAM      [reduce using rule 17 (declaration_list)]
    END_PROGRAM      [reduce using rule 72 (statement_list)]
    FUNCTION         [reduce using rule 17 (declaration_list)]
    FUNCTION_BLOCK   [reduce using rule 17 (declaration_list)]
    VAR              [reduce using rule 17 (declaration_list)]
    VAR_INPUT        [reduce using rule 17 (declaration_list)]
    VAR_OUTPUT       [reduce using rule 17 (declaration_list)]
    VAR_IN_OUT       [reduce using rule 17 (declaration_list)]
    VAR_EXTERNAL     [reduce using rule 17 (declaration_list)]
    VAR_GLOBAL       [reduce using rule 17 (declaration_list)]
    VAR_TEMP         [reduce using rule 17 (declaration_list)]
    VAR_CONFIG       [reduce using rule 17 (declaration_list)]
    VAR_CONSTANT     [reduce using rule 17 (declaration_list)]
    IF               [reduce using rule 17 (declaration_list)]
    IF               [reduce using rule 72 (statement_list)]
    CASE             [reduce using rule 17 (declaration_list)]
    CASE             [reduce using rule 72 (statement_list)]
    FOR              [reduce using rule 17 (declaration_list)]
    FOR              [reduce using rule 72 (statement_list)]
    WHILE            [reduce using rule 17 (declaration_list)]
    WHILE            [reduce using rule 72 (statement_list)]
    REPEAT           [reduce using rule 17 (declaration_list)]
    REPEAT           [reduce using rule 72 (statement_list)]
    EXIT             [reduce using rule 17 (declaration_list)]
    EXIT             [reduce using rule 72 (statement_list)]
    CONTINUE         [reduce using rule 17 (declaration_list)]
    CONTINUE         [reduce using rule 72 (statement_list)]
    RETURN           [reduce using rule 17 (declaration_list)]
    RETURN           [reduce using rule 72 (statement_list)]
    TYPE             [reduce using rule 17 (declaration_list)]
    LPAREN           [reduce using rule 17 (declaration_list)]
    LPAREN           [reduce using rule 72 (statement_list)]

    declaration_list      go to state 46
    declaration           go to state 47
    var_declaration       go to state 48
    var_category          go to state 49
    type_declaration      go to state 50
    function_declaration  go to state 51
    function_type         go to state 52
    statement_list        go to state 53
    statement             go to state 54
    assignment_statement  go to state 55
    expression_statement  go to state 56
    if_statement          go to state 57
    case_statement        go to state 58
    for_statement         go to state 59
    while_statement       go to state 60
    repeat_statement      go to state 61
    return_statement      go to state 62
    exit_statement        go to state 63
    continue_statement    go to state 64
    primary_expr          go to state 65
    function_call         go to state 66
    array_access          go to state 67
    member_access         go to state 68


State 10

   15 library_declaration: LIBRARY IDENTIFIER • VERSION STRING_LITERAL declaration_list END_LIBRARY
   16                    | LIBRARY IDENTIFIER • declaration_list END_LIBRARY

    FUNCTION        shift, and go to state 25
    FUNCTION_BLOCK  shift, and go to state 26
    VERSION         shift, and go to state 69
    VAR             shift, and go to state 27
    VAR_INPUT       shift, and go to state 28
    VAR_OUTPUT      shift, and go to state 29
    VAR_IN_OUT      shift, and go to state 30
    VAR_EXTERNAL    shift, and go to state 31
    VAR_GLOBAL      shift, and go to state 32
    VAR_TEMP        shift, and go to state 33
    VAR_CONFIG      shift, and go to state 34
    VAR_CONSTANT    shift, and go to state 35
    TYPE            shift, and go to state 44

    FUNCTION        [reduce using rule 17 (declaration_list)]
    FUNCTION_BLOCK  [reduce using rule 17 (declaration_list)]
    VAR             [reduce using rule 17 (declaration_list)]
    VAR_INPUT       [reduce using rule 17 (declaration_list)]
    VAR_OUTPUT      [reduce using rule 17 (declaration_list)]
    VAR_IN_OUT      [reduce using rule 17 (declaration_list)]
    VAR_EXTERNAL    [reduce using rule 17 (declaration_list)]
    VAR_GLOBAL      [reduce using rule 17 (declaration_list)]
    VAR_TEMP        [reduce using rule 17 (declaration_list)]
    VAR_CONFIG      [reduce using rule 17 (declaration_list)]
    VAR_CONSTANT    [reduce using rule 17 (declaration_list)]
    TYPE            [reduce using rule 17 (declaration_list)]
    $default        reduce using rule 17 (declaration_list)

    declaration_list      go to state 70
    declaration           go to state 47
    var_declaration       go to state 48
    var_category          go to state 49
    type_declaration      go to state 50
    function_declaration  go to state 51
    function_type         go to state 52


State 11

    7 import_declaration: IMPORT IDENTIFIER • SEMICOLON
    8                   | IMPORT IDENTIFIER • AS IDENTIFIER SEMICOLON
    9                   | IMPORT IDENTIFIER • FROM STRING_LITERAL SEMICOLON
   10                   | IMPORT IDENTIFIER • AS IDENTIFIER FROM STRING_LITERAL SEMICOLON

    FROM       shift, and go to state 71
    AS         shift, and go to state 72
    SEMICOLON  shift, and go to state 73


State 12

    0 $accept: compilation_unit $end •

    $default  accept


State 13

    6 import_list: import_list import_declaration •

    $default  reduce using rule 6 (import_list)


State 14

    1 compilation_unit: import_list program_declaration •

    $default  reduce using rule 1 (compilation_unit)


State 15

    3 compilation_unit: import_list library_declaration •

    $default  reduce using rule 3 (compilation_unit)


State 16

  133 primary_expr: INTEGER_LITERAL •

    $default  reduce using rule 133 (primary_expr)


State 17

  134 primary_expr: REAL_LITERAL •

    $default  reduce using rule 134 (primary_expr)


State 18

  135 primary_expr: BOOL_LITERAL •

    $default  reduce using rule 135 (primary_expr)


State 19

  136 primary_expr: STRING_LITERAL •

    $default  reduce using rule 136 (primary_expr)


State 20

  137 primary_expr: WSTRING_LITERAL •

    $default  reduce using rule 137 (primary_expr)


State 21

  138 primary_expr: TIME_LITERAL •

    $default  reduce using rule 138 (primary_expr)


State 22

  139 primary_expr: DATE_LITERAL •

    $default  reduce using rule 139 (primary_expr)


State 23

  140 primary_expr: IDENTIFIER •
  145 function_call: IDENTIFIER • LPAREN RPAREN
  146              | IDENTIFIER • LPAREN argument_list RPAREN
  147              | IDENTIFIER • DOT IDENTIFIER LPAREN RPAREN
  148              | IDENTIFIER • DOT IDENTIFIER LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 74
    DOT     shift, and go to state 75

    DOT       [reduce using rule 140 (primary_expr)]
    $default  reduce using rule 140 (primary_expr)


State 24

   14 program_declaration: PROGRAM IDENTIFIER END_PROGRAM •

    $default  reduce using rule 14 (program_declaration)


State 25

   61 function_type: FUNCTION •

    $default  reduce using rule 61 (function_type)


State 26

   62 function_type: FUNCTION_BLOCK •

    $default  reduce using rule 62 (function_type)


State 27

   24 var_category: VAR •

    $default  reduce using rule 24 (var_category)


State 28

   25 var_category: VAR_INPUT •

    $default  reduce using rule 25 (var_category)


State 29

   26 var_category: VAR_OUTPUT •

    $default  reduce using rule 26 (var_category)


State 30

   27 var_category: VAR_IN_OUT •

    $default  reduce using rule 27 (var_category)


State 31

   28 var_category: VAR_EXTERNAL •

    $default  reduce using rule 28 (var_category)


State 32

   29 var_category: VAR_GLOBAL •

    $default  reduce using rule 29 (var_category)


State 33

   31 var_category: VAR_TEMP •

    $default  reduce using rule 31 (var_category)


State 34

   32 var_category: VAR_CONFIG •

    $default  reduce using rule 32 (var_category)


State 35

   30 var_category: VAR_CONSTANT •

    $default  reduce using rule 30 (var_category)


State 36

   87 if_statement: IF • expression THEN statement_list END_IF
   88             | IF • expression THEN statement_list ELSE statement_list END_IF
   89             | IF • expression THEN statement_list elsif_list END_IF
   90             | IF • expression THEN statement_list elsif_list ELSE statement_list END_IF

    INTEGER_LITERAL  shift, and go to state 16
    REAL_LITERAL     shift, and go to state 17
    BOOL_LITERAL     shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    WSTRING_LITERAL  shift, and go to state 20
    TIME_LITERAL     shift, and go to state 21
    DATE_LITERAL     shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    PLUS             shift, and go to state 76
    MINUS            shift, and go to state 77
    NOT              shift, and go to state 78
    LPAREN           shift, and go to state 45

    expression           go to state 79
    logical_expr         go to state 80
    comparison_expr      go to state 81
    additive_expr        go to state 82
    multiplicative_expr  go to state 83
    unary_expr           go to state 84
    primary_expr         go to state 85
    function_call        go to state 86
    array_access         go to state 67
    member_access        go to state 68


State 37

   94 case_statement: CASE • expression OF case_list END_CASE
   95               | CASE • expression OF case_list ELSE statement_list END_CASE

    INTEGER_LITERAL  shift, and go to state 16
    REAL_LITERAL     shift, and go to state 17
    BOOL_LITERAL     shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    WSTRING_LITERAL  shift, and go to state 20
    TIME_LITERAL     shift, and go to state 21
    DATE_LITERAL     shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    PLUS             shift, and go to state 76
    MINUS            shift, and go to state 77
    NOT              shift, and go to state 78
    LPAREN           shift, and go to state 45

    expression           go to state 87
    logical_expr         go to state 80
    comparison_expr      go to state 81
    additive_expr        go to state 82
    multiplicative_expr  go to state 83
    unary_expr           go to state 84
    primary_expr         go to state 85
    function_call        go to state 86
    array_access         go to state 67
    member_access        go to state 68


State 38

  101 for_statement: FOR • IDENTIFIER ASSIGN expression TO expression DO statement_list END_FOR
  102              | FOR • IDENTIFIER ASSIGN expression TO expression BY expression DO statement_list END_FOR

    IDENTIFIER  shift, and go to state 88


State 39

  103 while_statement: WHILE • expression DO statement_list END_WHILE

    INTEGER_LITERAL  shift, and go to state 16
    REAL_LITERAL     shift, and go to state 17
    BOOL_LITERAL     shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    WSTRING_LITERAL  shift, and go to state 20
    TIME_LITERAL     shift, and go to state 21
    DATE_LITERAL     shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    PLUS             shift, and go to state 76
    MINUS            shift, and go to state 77
    NOT              shift, and go to state 78
    LPAREN           shift, and go to state 45

    expression           go to state 89
    logical_expr         go to state 80
    comparison_expr      go to state 81
    additive_expr        go to state 82
    multiplicative_expr  go to state 83
    unary_expr           go to state 84
    primary_expr         go to state 85
    function_call        go to state 86
    array_access         go to state 67
    member_access        go to state 68


State 40

  104 repeat_statement: REPEAT • statement_list UNTIL expression END_REPEAT

    INTEGER_LITERAL  shift, and go to state 16
    REAL_LITERAL     shift, and go to state 17
    BOOL_LITERAL     shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    WSTRING_LITERAL  shift, and go to state 20
    TIME_LITERAL     shift, and go to state 21
    DATE_LITERAL     shift, and go to state 22
    IDENTIFIER       shift, and go to state 23
    IF               shift, and go to state 36
    CASE             shift, and go to state 37
    FOR              shift, and go to state 38
    WHILE            shift, and go to state 39
    REPEAT           shift, and go to state 40
    EXIT             shift, and go to state 41
    CONTINUE         shift, and go to state 42
    RETURN           shift, and go to state 43
    LPAREN           shift, and go to state 45
